--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.5",
+    "@material-ui/core": "^4.5.1",
+    "@material-ui/icons": "^4.5.1",
     "@pusher/chatkit-client": "^1.13.1",
     "@pusher/chatkit-server": "^2.1.1",
     "firebase": "^6.6.2",
@@ -15,7 +17,8 @@
     "react-scripts": "3.1.1",
     "react-select": "^3.0.8",
     "recompose": "^0.30.0",
-    "styled-components": "^4.4.0"
+    "styled-components": "^4.4.0",
+    "typeface-roboto": "0.0.75"
   },
   "scripts": {
     "start": "react-scripts start",
